--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "node fix-order-case.js && node server.js",
     "dev": "nodemon server.js",
-    "seed": "node seeder.js"
+    "seed": "node seeder.js",
+    "fix-order": "node fix-order-case.js"
   },
   "author": "",
   "license": "ISC",
