--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.js",
+    "render-build": "npm install && npm run build"
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.2",
