--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js",
-    "render-build": "npm install && npm run build"
+    "render-build": "node build-render.js",
+    "build:render": "node build.js",
+    "build:static": "node build-static.js"
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.2",
