--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,11 @@ services:
       - type: rewrite
         source: /*
         destination: /index.html
+      - type: redirect
+        source: /
+        destination: /index.html
     envVars:
       - key: NODE_ENV
         value: production
+      - key: VITE_API_URL
+        value: https://e-commerce-backend.onrender.com
