--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,7 @@
     }
   ],
   "routes": [
+    { "handle": "filesystem" },
     {
       "src": "/(.*)",
       "dest": "/frontend/build/index.html"
