--- a/render.yaml
+++ b/render.yaml
@@ -1,29 +1,10 @@
 services:
-  # Backend service
+  # Combined service for both frontend and backend
   - type: web
-    name: e-commerce-backend
+    name: e-commerce-website
     env: node
-    buildCommand: cd Backend && npm install
-    startCommand: cd Backend && npm start
+    buildCommand: npm install && npm run build:frontend
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-
-  # Frontend service as a static site
-  - type: static
-    name: e-commerce-frontend
-    env: static
-    buildCommand: cd frontend && npm install && npm run build:static
-    staticPublishPath: ./frontend/build
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-      - type: redirect
-        source: /
-        destination: /index.html
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: VITE_API_URL
-        value: https://e-commerce-backend.onrender.com
