--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "start:backend": "cd Backend && npm start",
+    "start:frontend": "cd frontend && npm start",
     "build": "cd frontend && npm install && npm run build",
-    "build:frontend": "cd frontend && npm install && npm run build:static",
+    "build:frontend": "cd frontend && npm install && npm run build",
+    "postinstall": "cd Backend && npm install && cd ../frontend && npm install",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd Backend && npm run dev",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\""
