--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
 VITE_PAYAL_CLIENT_ID=AWQWAKWIDA62Kp48f35J_5ovOozySDdfOmeOcO_Bqdtl0dUpFFReCUJn9L5kkgZj68BH8F0BpuOEBsYV
 
-# Replace this with your actual backend URL on Render
-VITE_BACKEND_URL=https://e-commerce-backend-curh.onrender.com
+# Production backend URL
+VITE_BACKEND_URL=https://e-commerce-website-curh.onrender.com
