--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js",
-    "render-build": "node build-render.js",
-    "build:render": "node build.js",
-    "build:static": "node build-static.js",
-    "postbuild": "cp dist/index.html dist/200.html && cp dist/index.html dist/404.html"
+    "render-build": "vite build",
+    "build:render": "vite build",
+    "build:static": "vite build"
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.2",
