--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
 VITE_PAYAL_CLIENT_ID=AWQWAKWIDA62Kp48f35J_5ovOozySDdfOmeOcO_Bqdtl0dUpFFReCUJn9L5kkgZj68BH8F0BpuOEBsYV
 
 # Production backend URL
-VITE_BACKEND_URL=https://e-commerce-website-curh.onrender.com
+VITE_BACKEND_URL=https://e-commerce-website-curh.onrender.com/api
