--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,12 @@ services:
   - type: web
     name: e-commerce-website
     env: node
-    buildCommand: npm install && cd frontend && npm install && npm run build
+    buildCommand: npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 8001
+        value: 3000
       - key: VITE_BACKEND_URL
-        value: https://e-commerce-website-curh.onrender.com
+        value: https://e-commerce-website-curh.onrender.com/api
