--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "node server.js",
-    "render-build": "vite build",
-    "build:render": "vite build",
-    "build:static": "vite build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.2",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
-    "express": "^4.18.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
